--- a/app.conf.example
+++ b/app.conf.example
@@ -1,10 +1,10 @@
 # 百度语音 API 参数
 [BaiduVoiceAPI]
-cuid =
-apikey =
-secretkey =
-accesstoken =
-expireat =
+cuId =
+apiKey =
+secretKey =
+accessToken =
+expireAt =
 
 # 百度语音识别参数
 [BaiduVoiceRecognition]
@@ -19,3 +19,14 @@ speed = 5
 volumn = 5
 person = 0
 generationLanguage = zh
+
+# 图灵机器人 API 参数
+[TulingAPI]
+apiKey =
+
+# 唤醒欢迎语
+[Salutatory]
+0 = 嘿，怎么了
+1 = 有什么需要我帮忙的嘛
+2 = 嗯嗯，我在的，有什么事
+3 = 无事不登三宝殿，说吧，有何贵干
